--- a/shivaansh/index.html
+++ b/shivaansh/index.html
@@ -22,22 +22,22 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navigation">
                     <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                    <i class="fa fa-bars"></i>
                   </button>
-                    <div class="navbar-brand hidden-md hidden-lg">Brand</div>
+                    <div class="navbar-brand hidden-md hidden-lg">
+                        <a href="index.html" class="logo"><img src="img/logo.png" /></a>
+                    </div>
                 </div>
 
                 <div class="collapse navbar-collapse" id="main-navigation">
                     <ul class="nav navbar-nav">
-                        <li><a href="#" data-target="#hero-section">Home</a></li>
                         <li><a href="#" data-target="#about-us">About Us</a></li>
-                        <li>
-                            <a href="index.html" class="logo"><img src="img/logo.png" /></a>
-                        </li>
                         <li><a href="#" data-target="#services">Services</a></li>
+                        <li>
+                            <a href="index.html" class="logo exceptional hidden-xs"><img src="img/logo.png" /></a>
+                        </li>
                         <li><a href="#" data-target="#contact-us">Contact Us</a></li>
+                        <li><a class="exceptional" href="http://www.imdb.com/name/nm5069928/">IMDb PROFILE</a></li>
                     </ul>
                 </div>
             </div>
@@ -49,7 +49,7 @@
             <div class="container p-lr-none" style="box-shadow: 0px 60px 15px -1px #131313;">
                 <div class="layer">
                     <div class="profile main text-center">
-                        <img src="img/profile.jpg" />
+                        <img src="img/sachin.jpg" />
                         <h2 class="profile-title"><span>Sachin</span> D. Kesarkar</h2>
                     </div>
                     <div class="profile-brief text-center">
@@ -82,21 +82,21 @@
                     <div class="col-md-6 ourTeam-section">
                         <h2 class="section-title">Our <span>Team</span></h2>
                         <ul class="list-members list-unstyled list-p-none text-left">
-                            <li>
+                            <!--<li>
                                 <div class="profile text-center">
                                     <img src="img/profile.jpg" />
                                     <h2 class="profile-title"><span>Arvind</span> Rajpurohit</h2>
                                 </div>
-                            </li>
+                            </li>-->
                             <li>
                                 <div class="profile text-center">
-                                    <img src="img/profile.jpg" />
+                                    <img src="img/gautam.jpg" />
                                     <h2 class="profile-title"><span>Gautam</span> Malviya</h2>
                                 </div>
                             </li>
                             <li>
                                 <div class="profile text-center">
-                                    <img src="img/profile.jpg" />
+                                    <img src="img/sanjay.jpg" />
                                     <h2 class="profile-title"><span>Sanjay</span> Divekar</h2>
                                 </div>
                             </li>
@@ -111,6 +111,80 @@
                     <p class="section-desc">
                         Making film in India can be easy hazzle free yet challanging, but with Shivaansh it can be exciting and momrable, because we provide excellent team and service with great locations at affordable price.
                     </p>
+                    <div class="section-accordion">
+                        <div class="panel-group" id="services-accordion">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" class="collapsed" data-parent="#services-accordion" href="#collapse1">FIXING AND PRODUCTION SUPPORT</a>
+                                    </h4>
+                                </div>
+                                <div id="collapse1" class="panel-collapse collapse">
+                                    <div class="panel-body">
+                                        <p>
+                                            We provide fixing and line production services for feature films documentaries add shoots, photo shoots from finding you real and amazing locations from each and every corner of our Country.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" class="collapsed" data-parent="#services-accordion" href="#collapse2">LOCATION SCOUTING </a>
+                                    </h4>
+                                </div>
+                                <div id="collapse2" class="panel-collapse collapse">
+                                    <div class="panel-body">
+                                        <p>
+                                            We can find you each and every perfect location for your film keeping in my mind the overall project locations like old village, market, grassland, typical bazaar etc like residential property including houses, apartments and conversions, warehouses and industrial property.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" class="collapsed" data-parent="#services-accordion" href="#collapse3">LOCATION PERMITS </a>
+                                    </h4>
+                                </div>
+                                <div id="collapse3" class="panel-collapse collapse">
+                                    <div class="panel-body">
+                                        <p>
+                                            We also acquire permits for shoots in trains, at monuments, ports, at private homes, buildings, bungalows etc. so that the shoot progress smoothly.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" class="collapsed" data-parent="#services-accordion" href="#collapse4">CREW AND EQUIPMENT HIRE </a>
+                                    </h4>
+                                </div>
+                                <div id="collapse4" class="panel-collapse collapse">
+                                    <div class="panel-body">
+                                        <p>
+                                            India is home to one of the biggest film industries in the world, technical crew is always available on call. Shivaansh Production can help you find the right camera person sound recordist grisp, gaffer and shooting equipments jimmy jip. We can also facilitate the renting of the latest HD cameras, lights, grip, and sound equipment from trusted suppliers.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" class="collapsed" data-parent="#services-accordion" href="#collapse5">LOGISTICS </a>
+                                    </h4>
+                                </div>
+                                <div id="collapse5" class="panel-collapse collapse">
+                                    <div class="panel-body">
+                                        <p>
+                                            We can organize appropriate accommodation for your crew keeping in mind the location, budget and safety. We also have network of professionals working with us .We also provide two and four wheelers vintage cars, trucks, vanity, B.E.S.T buses, Fire Brigade van, B.M.C garbage van with permission.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -120,14 +194,14 @@
         <div class="container">
             <h2 class="section-title text-center">Talk to us about filming<span>GET IN TOUCH</span></h2>
             <div class="contact-us-section col-xs-12 p-lr-none">
-                <div class="col-md-6 form-section">
+                <div class="col-xs-12 col-md-6 form-section">
                     <form action="contact-query.php" method="post">
                         <input type="text" class="form-control" name="name" placeholder="NAME" required />
                         <input type="email" class="form-control" name="email" placeholder="EMAIL" required />
                         <button type="submit" class="btn btn-primary btn-submit pull-right">SUBMIT</button>
                     </form>
                 </div>
-                <div class="col-md-6 details-section">
+                <div class="col-xs-12 col-md-6 details-section">
                     <h3 class="message">Call or mail us, and we&rsquo;ll get back.</h3>
                     <h3 class="name">Sachin D. Kesarkar</h3>
                     <h3 class="mobile">M: 91-983-338-8330, 91-993-023-0301</h3>
@@ -137,6 +211,7 @@
         </div>
         <a href="http://www.kreativesanity.com/" class="siteBy" title="A Digital Branding, Website Design & Developemnt Firm based in Mumbai">Site by Kreative Sanity</a>
     </footer>
+    <i class="fa fa-angle-double-up goToTop"></i>
 </body>
 <script src="http://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -150,10 +225,20 @@
             delay: 1000,
             offset: 0
         });
+
+        $('.goToTop').on('click', function() {
+            $('html, body').animate({
+                scrollTop: 0
+            }, 1000);
+        });
     });
 
     $(window).resize(function() {
         addTopGap();
+    });
+
+    $(window).scroll(function() {
+        goToTop();
     });
     /* End of Call all the necessary functions */
 
@@ -181,7 +266,17 @@
             offsetHeight = offset;
         }
 
-        $(target).find('a').click(function() {
+        $(target).find('a').click(function(e) {
+            if ($(this).hasClass('exceptional')) {
+                return true;
+            } else {
+                e.preventDefault();
+            }
+
+            if ($(window).width() < 768) {
+                $('.navbar-toggle').trigger('click');
+            }
+
             var scrollDiv = $(this).attr('data-target');
             $('html, body').animate({
                 scrollTop: $(scrollDiv).offset().top - offsetHeight
@@ -189,6 +284,15 @@
         });
     };
     /* End of Smooth Scroll */
+
+    var goToTop = function() {
+        if (($(window).scrollTop() > 100) && ($(window).width() > 760)) {
+            $('.goToTop').addClass('active');
+        } else {
+            $('.goToTop').removeClass('active');
+        }
+    }
+
     /** End of Custom Functions Declaration **/
 
 </script>
